fix meeting card description text overflow

--- a/react-app/src/components/Meetings/Card.module.css
+++ b/react-app/src/components/Meetings/Card.module.css
@@ -27,6 +27,7 @@
 .titleText {
   font-family: 'Podkova', serif;
   font-size: 40px;
+  line-height: 0.9em;
   font-weight: 200;
   padding-top: 20px;
   text-align: center;
@@ -69,8 +70,8 @@
   text-align: left;
   height: 30%;
   padding-top: 10px;
+  overflow-y: auto;
 }
-
 
 .waiting {
   display: flex;
