--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -7,10 +7,10 @@
   min-height: 120vh;
   min-width: 100vw;
   background-image: url(./assets/corkboard-background.jpg);
-  background-size: cover;
-  background-repeat: repeat-y;
-  background-position: center;
-  height: 120vh;
+  background-size: 110%;
+  background-repeat: repeat;
+  background-position: top left;
+  height: auto;
 }
 
 
@@ -40,4 +40,25 @@ a {
 a:visited {
   text-decoration: none;
   color: #000;
+}
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(40, 40, 40);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(140, 140, 140);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: goldenrod;
 }
